# gogoo-panel-applications

./: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
data/: CMakeLists.txt  Makefile.in  gogoo-panel-applications.desktop.in
data/theme/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  Makefile.in  com.meego.UX.Shell.Panels.applications.service.in  meego-panel-applications.c
tests/: Makefile.in
